styles.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    user-select: none;
}

button {
    border: none;
}

.row {
    display: flex;
    gap: 10px;
    margin-bottom: 10px;
}

.round-btn {
    font-size: xx-large;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
    width: 55px;
    height: 55px;
}

.round-btn:hover {
    cursor: pointer;
}

.oval-btn {
    flex-grow: 2;
    height: 55px;
    border-radius: 55px;
    padding: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: xx-large;
}

.oval-btn:hover {
    cursor: pointer;
}

.round-btn:active,
.oval-btn:active {
    transform: scale(0.95);
}

.clear-btn {
    background-color: #B50800;
    color: #EEEEEE;
}

.backspace-btn {
    background-color: #0053B5;
    color: #EEEEEE;
}

.number-btn {
    background-color: #EEEEEE;
    color: #222831;
}

.ops-btn {
    background-color: #00ADB5;
    color: #EEEEEE;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background-color: #393E46;
}

.calculator {
    background-color: #222831;
    padding: 20px;
    border-radius: 20px;
}

.display {
    background-color: #393E46;
    border-radius: 20px;
    padding: 10px;
    margin-bottom: 20px;
    color: #EEEEEE;
    text-align: end;
    font-size: 3rem;
    height: 4rem;
}

.input {
    display: flex;
    gap: 10px;
}

